syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.example.customer.grpc";

message ReserveCreditRequest {
  string customerId = 1;
  double value = 2;
}

message ReserveCreditResponse {
  string response = 1;
}

message AddCreditRequest {
  string customerId = 1;
  double value = 2;
}

message AddCreditResponse {
  string response = 1;
}

service CustomerService {
  rpc reserveCredit (ReserveCreditRequest) returns (ReserveCreditResponse);
  rpc addCredit (AddCreditRequest) returns (AddCreditResponse);
}