syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.example.stock.grpc";

message ReserveProductRequest {
  string productId = 1;
  int32 quantity = 2;
}

message ReserveProductResponse {
  string response = 1;
}

service ProductService {
  rpc reserveProduct (ReserveProductRequest) returns (ReserveProductResponse);
}